--- a/pom.xml
+++ b/pom.xml
@@ -209,9 +209,9 @@
 
         <!-- Supported Plugins -->
         <dependency>
-            <groupId>io.github.mooy1</groupId>
+            <groupId>com.github.SlimeFun-Lab</groupId>
             <artifactId>InfinityExpansion</artifactId>
-            <version>90e11bc</version>
+            <version>c9db035a0b</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
