--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.sefiraat</groupId>
     <artifactId>networks</artifactId>
-    <version>MODIFIED</version>
+    <version>4.1.0-UNOFFICIAL</version>
 
     <distributionManagement>
         <repository>
@@ -151,10 +151,6 @@
 
     <repositories>
         <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
@@ -177,13 +173,13 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.21.1-R0.1-SNAPSHOT</version>
+            <version>1.21.10-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.SlimeFun-Lab</groupId>
             <artifactId>Slimefun4</artifactId>
-            <version>3ea21da</version>
+            <version>6d5694e</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -222,7 +218,7 @@
         <dependency>
             <groupId>com.github.SlimeFun-Lab</groupId>
             <artifactId>InfinityExpansion</artifactId>
-            <version>c9db035a0b</version>
+            <version>78b140c13f</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -232,21 +228,21 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.schntgaispock</groupId>
+            <groupId>com.github.SlimeFun-Lab</groupId>
             <artifactId>SlimeHUD</artifactId>
-            <version>1.2.7</version>
+            <version>97d3a09130</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.bgsoftware</groupId>
             <artifactId>WildChestsAPI</artifactId>
-            <version>2024.1</version>
+            <version>2025.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.gmail.nossr50.mcMMO</groupId>
             <artifactId>mcMMO</artifactId>
-            <version>2.2.017</version>
+            <version>2.2.031</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
